--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+main {
+  /* background: #C8C8C8; */
+}
 /* navbar */
 .navbar {
   background: #2C4395;
@@ -25,6 +28,8 @@
   border-radius: 20px;
   transition: color 0.3s;
   transition: background-color 0.3s;
+  width: 150px;
+  height: 36px;
 }
 .don:hover {
   color: #2C4395;
@@ -97,12 +102,34 @@
   width: 900px;
 } */
 .img {
-  background: red;
   object-fit: cover;
-  /* height: 710px; */
 }
 /* main */
-h1 {
+h1, h2, p {
   font-family: 'Dosis', sans-serif;
   color: #6F6F6F;
+}
+h3 {
+  font-family: 'Dosis', sans-serif;
+}
+/* Media query */
+@media screen and (min-width: 1200px) {
+  .img {
+    object-fit: cover;
+    height: 710px;
+  }
+}
+.donation {
+  height: 350px;
+  width: 100%;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/IMG_7023.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: local, fixed;
+}
+footer {
+  width: 100%;
+  height: 200px;
+  background: #2C4395;
 }
