--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
-main {
-  /* background: #C8C8C8; */
-}
+
 /* navbar */
 .navbar {
   background: #2C4395;
@@ -105,13 +103,46 @@ main {
   object-fit: cover;
 }
 /* main */
-h1, h2, p {
+.baniere-title {
+  height: 710px;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/6L8A6693.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: local, fixed;
+}
+.title {
+  font-family: 'Dosis', sans-serif;
+  font-size: 56px;
+}
+.slogan {
+  font-style: italic;
+}
+/* .descript-img1 {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/IMG_4659.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.descript-img2 {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/descript-img1.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+} */
+h2, p {
+  font-size: 26px;
   font-family: 'Dosis', sans-serif;
   color: #6F6F6F;
 }
 h3 {
   font-family: 'Dosis', sans-serif;
 }
+/* .descript-title {
+  background: #2C4395;
+} */
 /* Media query */
 @media screen and (min-width: 1200px) {
   .img {
@@ -128,8 +159,8 @@ h3 {
   background-size: cover;
   background-attachment: local, fixed;
 }
-footer {
+/* footer {
   width: 100%;
   height: 200px;
   background: #2C4395;
-}
+} */
