--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,9 @@
 .slogan {
   font-style: italic;
 }
+.descript-goal {
+  background: #2C4395;
+}
 /* .descript-img1 {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/IMG_4659.jpeg");
   background-repeat: no-repeat;
