--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 .navbar {
   background: #2C4395;
   font-family: 'Nunito', sans-serif;
+  position: fixed;
 }
 /* liens menu */
 .menu-items {
@@ -74,31 +75,6 @@
   transform: rotate(-45deg);
   top: 48%;
 }
-/* carousel */
- /* .owl-carousel {
-  height: 600px;;
-  width: 900px;
-}
-.owl-item {
-  display: flex;
-  justify-content: center;
-}
-.item1 {
-  height: 600px;
-  width: 900px;
-}
-.item2 {
-  height: 600px;
-  width: 900px;
-}
-.item3 {
-  height: 600px;
-  width: 900px;
-}
-.item4 {
-  height: 600px;
-  width: 900px;
-} */
 .img {
   object-fit: cover;
 }
@@ -114,12 +90,11 @@
 .title {
   font-family: 'Dosis', sans-serif;
   font-size: 56px;
+  text-shadow: 1px 1px 2px black;
 }
 .slogan {
   font-style: italic;
-}
-.descript-goal {
-  background: #2C4395;
+  text-shadow: 1px 1px 2px black;
 }
 /* .descript-img1 {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/IMG_4659.jpeg");
@@ -143,9 +118,21 @@ h2, p {
 h3 {
   font-family: 'Dosis', sans-serif;
 }
-/* .descript-title {
+  .descript-title {
   background: #2C4395;
-} */
+}
+ .descript-img1 {
+  background-image: url("../img/img_6809.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.descript-img2 {
+  background-image: url("../img/img_4679.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 /* Media query */
 @media screen and (min-width: 1200px) {
   .img {
@@ -153,17 +140,35 @@ h3 {
     height: 710px;
   }
 }
+.thanks {
+  height: 350px;
+  width: 100%;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/IMG_7023.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  background-attachment: local, fixed;
+  text-shadow: 1px 1px 2px black;
+}
 .donation {
   height: 350px;
   width: 100%;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/IMG_7023.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: cover;
   background-attachment: local, fixed;
 }
-/* footer {
+/* footer */
+footer {
   width: 100%;
   height: 200px;
   background: #2C4395;
-} */
+}
+/* social */
+.social {
+transition: all .2s ease-in-out;
+}
+.social:hover {
+  transform: scale(1.2);
+}
