--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,59 @@
 
 /* navbar */
 .navbar {
-  background: #2C4395;
+  background: #70C24A;
   font-family: 'Nunito', sans-serif;
   position: fixed;
 }
 /* liens menu */
 .menu-items {
+  text-align: center;
+  height: 26px;
+  width: auto;
+  border-radius: 20px;
+  border: 2px solid #70C24A;
   color: white !important;
-  transition: color 0.3s;
+  transition: background-color 0.3s;
+  transition: box-shadow 0.3s;
 }
 .menu-items:hover {
-  color: #7EE94C !important;
+  background-color: #7CB342;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .logo {
   font-family: 'Lobster', sans-serif;
   font-size: 32px;
-  color: white;
+  color: white !important;
+  text-decoration: none;
 }
-.logo:hover {
-  color: white;
+.don1 {
+  color: #70C24A;
+  border: 2px solid #70C24A;
+  border-radius: 20px;
+  background: white;
+  transition: color 0.3s;
+  transition: background-color 0.3s;
+  width: 150px;
+  height: 36px;
 }
-.don {
-  color: #7EE94C;
-  border: 2px solid #7EE94C;
+.don1:hover {
+  color: white;
+  background-color: #7CB342;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.don2 {
+  color: #70C24A;
+  border: 2px solid #70C24A;
   border-radius: 20px;
   transition: color 0.3s;
   transition: background-color 0.3s;
   width: 150px;
   height: 36px;
 }
-.don:hover {
-  color: #2C4395;
-  background-color: #7EE94C;
+.don2:hover {
+  color: white;
+  background-color: #7CB342;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 /* menu burger */
 #wrapper {
@@ -119,7 +140,7 @@ h3 {
   font-family: 'Dosis', sans-serif;
 }
   .descript-title {
-  background: #2C4395;
+  background: #7CB342;
 }
  .descript-img1 {
   background-image: url("../img/img_6809.jpg");
@@ -163,7 +184,7 @@ h3 {
 footer {
   width: 100%;
   height: 200px;
-  background: #2C4395;
+  background: #2A3847;
 }
 /* social */
 .social {
