--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,14 @@
 .modal-content {
     background-color: #7CB342 !important;
 }
+.idError{
+    position: absolute;
+    top: 280px;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+} 
 .modal-header {
     border-bottom: 2px solid #70C24A !important;
 }
@@ -134,7 +142,7 @@ label, input {
 }
 /* main actu */
 .baniere-title {
-    height: 760px;
+    height: 960px;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/6L8A6693.jpg");
     background-repeat: no-repeat;
     background-position: center;
